2008-09-19 Albert Chu <chu11@llnl.gov>

	*
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensors_config.c
	(_cb_sensor_state_parse): Fix corner case.

2008-09-13 Albert Chu <chu11@llnl.gov>

        * ipmi-sensors/, ipmimonitoring/: Handle sensor completion code of
        IPMI_COMP_CODE_PARAMETER_OUT_OF_RANGE and
        IPMI_COMP_CODE_REQUEST_INVALID_DATA_FIELD as special case.

2008-09-11  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_7.

2008-09-10 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/, ipmimonitoring/: Handle sensor completion code of
	IPMI_COMP_CODE_COMMAND_ILLEGAL_FOR_SENSOR_OR_RECORD_TYPE as a
	special case.
	
2008-08-26  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_6.

2008-08-26  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/, ipmimonitoring/: Do not read non-BMC owned sensors.
	
2008-08-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/cmds/ipmi-chassis-cmds.c
	(fill_cmd_set_system_boot_options_boot_flags),
	libfreeipmi/src/api/ipmi-chassis-cmds-api.c
	(ipmi_cmd_set_system_boot_options_boot_flags): Fix input parameter
	check.
	
2008-08-02  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_5.

2008-08-01 Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_group): Add forgotten groups.
	
2008-07-15 Albert Chu <chu11@llnl.gov>

	* common/src/config-checkout.c (config_checkout_section): Fix
	corner case.
	
2008-07-10 Albert Chu <chu11@llnl.gov>

        * ipmi-sensors/src/ipmi-sensors-reading.c
        (_get_threshold_message_list, _get_generic_event_message_list,
        _get_sensor_specific_event_message_list): Fix cleanup corner case.
	
2008-07-07 Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-config.c, pef-config/src/pef-config.c,
	ipmi-sensors-config/src/ipmi-sensors-config.c: Fix error message
	output corner cases.
	