@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmi_monitoring_sdr_cache.c,v 1.15 2008-04-17 18:11:00 chu11 Exp $
+ *  $Id: ipmi_monitoring_sdr_cache.c,v 1.15.2.1 2008-09-19 20:38:39 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2006-2007 The Regents of the University of California.
@@ -138,6 +138,7 @@ _ipmi_monitoring_sdr_cache_filename(ipmi_monitoring_ctx_t c,
               else if (*str == 'L')
                 {
                   char local_hostname[MAXHOSTNAMELEN+1];
+                  char *ptr;
                   
                   memset(local_hostname, '\0', MAXHOSTNAMELEN+1);
                   if (gethostname(local_hostname, MAXHOSTNAMELEN) < 0)
@@ -146,6 +147,10 @@ _ipmi_monitoring_sdr_cache_filename(ipmi_monitoring_ctx_t c,
                       c->errnum = IPMI_MONITORING_ERR_SYSTEM_ERROR;
                       return -1;
                     }
+
+                  /* shorten hostname if necessary */
+                  if ((ptr = strchr(local_hostname, '.')))
+                    *ptr = '\0';
 
                   if ((index + strlen(local_hostname)) >= MAXPATHLEN)
                     {
