@@ -3,6 +3,7 @@
 o Handle "invalid parameters" error codes in ipmi-sensors and
 ipmimonitoring/libipmimonitoring to work around some motherboards.
 o Fix bug in ipmimonitoring sensors configuration file parsing.
+o Fix corner case in libipmimonitoring sdr-cache filename creation.
 
 0.6.7 - 09/11/08
 ----------------
