@@ -1,5 +1,10 @@
 2008-09-19 Albert Chu <chu11@llnl.gov>
 
+	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sdr_cache.c
+	(_ipmi_monitoring_sdr_cache_filename): Fix filename corner case.
+	
+2008-09-19 Albert Chu <chu11@llnl.gov>
+
 	*
 	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensors_config.c
 	(_cb_sensor_state_parse): Fix corner case.
